--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
   <h1 class="h1 text-center">Bauers Calender</h1>
-  <h2 class="h2 text-center">for årene 600 til 3199 gældende fo Danmark og Norge</h2>
+  <h2 class="h2 text-center">for årene 600 til 3199 gældende for Danmark og Norge</h2>
   
   
   {# read and display just one flash message type #}
@@ -15,6 +15,6 @@
     </div>
   {% endfor %}
 
-  </p>
+  
 
 {% endblock %}
