--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,8 @@
         <meta name="keywords" content="Bauers Kalender, Bauers Calendar">
         <meta name="author" content="Michael Lindhardt Rasmussen">
 
+				<meta name="google-site-verification" content="xHLmgP5L_DvNjXQsmjCphySJEljc62J2Gt9qdse7sBc" />        
+
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
