--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,49 +25,49 @@
     
 <body>
 
+		<!-- Programmet Hovedmenu -->		
     
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <span class="navbar-brand mb-0 h1">Filicis</span>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span></button>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-  </div>
-
-    <!-- form class="form-inline">
-      <input class="form-control mr-sm-2" type="number" placeholder="Årstal" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Vælg</button>
-    </form -->
-    
-
-    
-
-    {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }} 
-        
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    	<span class="navbar-brand mb-0 h1">Filicis</span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    		<span class="navbar-toggler-icon"></span>
+    	</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+    		<ul class="navbar-nav">
+      		<li class="nav-item active">
+        		<a class="nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
+      		</li>
+      		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          		<a class="dropdown-item" href="#">Action</a>
+          		<a class="dropdown-item" href="#">Baggrunds materiale</a>
+          		<div class="dropdown-divider"></div>
+          		<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+        		</div>
+      		</li>
+      		
+    		</ul>
+  		</div>
+    	{{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }} 
         <div class="custom-control custom-switch px-3" >
           {{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
           <label class="custom-control-label" for="form_latin">Latin</label>
         </div>
         {{ form_widget(our_form.year, {'attr': {'class': 'form-control mr-sm-2', 'placeholder': 'Årstal', 'type': 'number', 'aria-label': 'Search'} }) }}
         {{ form_widget(our_form.send, {'label': 'Vælg', 'attr': {'class': 'btn btn-outline-primary my-2 my-sm-0'} })}}
+   			{{ form_rest(our_form) }}
+    	{{ form_end(our_form )}} 
+  	</div>  
+	</nav>   
 
-        {{ form_rest(our_form) }}
-    {{ form_end(our_form )}} 
+	{% include 'about.html.twig' %}
 
 
-
-   </div>  
-</nav>   
 
     
 <div class="container-fluid">
-
 
           {% block body %}{% endblock %}
 </div>
