--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,22 @@
       		<li class="nav-item active">
         		<a class="nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
       		</li>
+
+      		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          		<a class="dropdown-item" href="#">Juliansk</a>
+          		<a class="dropdown-item" href="#">Gregoriansk</a>
+                <a class="dropdown-item" href="#">Dansk / Norsk</a>
+           		<a class="dropdown-item" href="#">Svensk</a>
+                <a class="dropdown-item" href="#">Italiensk</a>
+        
+        		<div class="dropdown-divider"></div>
+          		<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+        		</div>
+      		</li>
+
+      		
       		<li class="nav-item dropdown">
         		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
