Fungerende Juliansk dagtælling

--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -11,7 +11,7 @@
     {{ bauer.getAar() }}
   </h1>
   <p>
-    Påsken falder på: {{ bauer.testDay()}} / {{ bauer.testMonth()}} 
+    Påsken falder på: {{ bauer.testDay()}} / {{ bauer.testMonth()}} - Påske Jtal: {{ bauer.getPjtal() }} - {{ bauer.jtaltest() }}
   </p>
 
   <div class='d-flex justify-content-center'>
