--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,105 +1,104 @@
 <!doctype html>
 <html lang="da">
-
-  <head>
+	<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Bauers Kalender for årene 600 til 3199 gældende for Danmark og Norge">
     <meta name="keywords" content="Bauers Kalender, Bauers Calendar">
     <meta name="author" content="Michael Lindhardt Rasmussen">
 
-    <meta name="google-site-verification" content="xHLmgP5L_DvNjXQsmjCphySJEljc62J2Gt9qdse7sBc" />        
-
-      <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="google-site-verification" content="xHLmgP5L_DvNjXQsmjCphySJEljc62J2Gt9qdse7sBc" />
 
 
     <title>{% block title %}Bauers Kalender{% endblock %}</title>
 
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+
+			<!-- Vi benytter os af Bootstrap -->
+
+			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		  	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    {% endblock %}
+
   </head>
-    
   <body>
 
-      <!-- Programmet Hovedmenu -->		
-    
+      <!-- Programmets Hovedmenu -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <span class="navbar-brand mb-0 h1">Filicis</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" 
-        data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-      	<li class="nav-item active">
-          <a class="nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
-      	</li>
-      	<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Juliansk</a>
-            <a class="dropdown-item" href="#">Gregoriansk</a>
-            <a class="dropdown-item" href="#">Dansk / Norsk</a>
-            <a class="dropdown-item" href="#">Svensk</a>
-            <a class="dropdown-item" href="#">Italiensk</a>
-        
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+    	<button class="navbar-toggler" type="button" data-toggle="collapse"
+        	data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      	<span class="navbar-toggler-icon"></span>
+    	</button>
+
+   		<!-- Selve menu strukturen -->
+
+    	<div class="collapse navbar-collapse" id="navbarNav">
+    		<a class="navbar-brand" href="https://github.com/filicis">Filicis</a>
+
+      	<div class="navbar-nav mr-auto">
+          <a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
+          <div class= 'nav-item dropdown'>
+          	<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
+          	<div class="dropdown-menu" aria-labelledby="navbarDropdown01">
+            	<a class="dropdown-item" href="#">Juliansk</a>
+            	<a class="dropdown-item" href="#">Gregoriansk</a>
+            	<a class="dropdown-item" href="#">Dansk / Norsk</a>
+            	<a class="dropdown-item" href="#">Svensk</a>
+            	<a class="dropdown-item" href="#">Italiensk</a>
+            	<div class="dropdown-divider"></div>
+            	<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+          	</div>
           </div>
-      	</li>
-      	<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
-	      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Baggrunds materiale</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+          <div class= 'nav-item dropdown'>
+          	<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button"	data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
+          	<div class="dropdown-menu" aria-labelledby="navbarDropdown02">
+            	<a class="dropdown-item" href="#">Action</a>
+            	<a class="dropdown-item" href="#">Baggrunds materiale</a>
+            	<div class="dropdown-divider"></div>
+            	<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+          	</div>
           </div>
-      	</li>
-      		
-      </ul>
-    </div>
-      {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }} 
-    <div class="custom-control custom-switch px-3" >
-      {{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
-      <label class="custom-control-label" for="form_latin">Latin</label>
-    </div>
-    {{ form_widget(our_form.year, {'attr': {'class': 'form-control mr-sm-2', 'placeholder': 'Årstal', 'type': 'number', 'aria-label': 'Search'} }) }}
+      	</div>
+    	</div>
+      {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }}
+    		<div class="custom-control custom-switch px-3" >
+      		{{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
+      		<label class="custom-control-label" for="form_latin">Latin</label>
+    		</div>
+    		{{ form_widget(our_form.year, {'attr': {'class': 'form-control mr-sm-2', 'placeholder': 'Årstal', 'type': 'number', 'aria-label': 'Search'} }) }}
         {{ form_widget(our_form.send, {'label': 'Vælg', 'attr': {'class': 'btn btn-outline-primary my-2 my-sm-0'} })}}
    			{{ form_rest(our_form) }}
-      {{ form_end(our_form )}} 
-    </div>  
-  </nav>   
+      {{ form_end(our_form )}}
+    </div>
+  </nav>
 
   {% include 'about.html.twig' %}
 
 
 
-    
-  <div class="container-fluid">
+
     {% block body %}{% endblock %}
-  </div>
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>i
 
 
 
-  <!-- Aktiverer Tooltip -->			
+  {% block javascripts %}
+
+			<!-- Bootstrap relaterede scripts -->
+
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+					integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+					integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+					integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <!-- Aktiverer Tooltip -->
   <!-- script> $(document).ready(function() { $("body").tooltip({ selector: '[data-toggle=tooltip]' }); }); </script -->
 
-  {% block javascripts %}{% endblock %} 
+
+  {% endblock %}
 
 </body>
 </ihtml>
