--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -1,7 +1,5 @@
+
 {% extends 'base.html.twig' %}
-
-
-
 
 {% block title %}Bauers Kalender{% endblock %}
 
@@ -14,54 +12,51 @@
     Påsken falder på: {{ bauer.testDay()}} / {{ bauer.testMonth()}} - Påske Jtal: {{ bauer.getPjtal() }} - {{ bauer.jtaltest() }}
   </p>
 
-  {% for nn in [0, 6] %}
-  <div class='d-flex justify-content-center'>
-		<div class="table-responsive" style='width: 1200px'>
-    	<table class="table table-fixed table-light table-sm small" style='width: 1200px' >
-    		<thead class="thead-light">
-    			<tr>
-      			{% for i in (bauer.months())|slice(nn,6) %}
-        			<th style='width: 200px' colspan='3' scope='col' class='text-center'> {% trans %} %i% {% endtrans %} </th>
+  <div class='container-flex d-flex justify-content-center'>
+		<div class="table-responsive-xl">
+    	<table class="table table-fixed table-light table-sm" >
+  			{% for nn in [0, 6] %}
+    			<thead class="thead-light">
+    				<tr>
+      				{% for i in (bauer.months())|slice(nn,6) %}
+        				<th style='width: 186px' colspan='3' scope='col' class='text-center'> {% trans %} %i% {% endtrans %} </th>
+      				{% endfor %}
+    				</tr>
+  				</thead>
+					<body>
+        		{% for d in 1..31 %}
+          		<tr class= 'small'>
+            		{% for mm in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]|slice(nn,6) %}
+
+            					{# Herfra er der 4 muligheder
+            	   				- Almindelig hverdag
+            	   				- Lørdag
+            	   				- Søn eller helligdag
+            	   				- Ugyldig dag (f.eks 31. Juli) #}
+
+              		{% if bauer.setDato(d, mm) and bauer.getAdatoClass() == 1 %}
+                		<th scope="row">{{ bauer.getUgedag() }}  </th>
+                		<td class="text-right">{{ d }}</td>
+                		<td style='width: 160px' class="text-left text-truncate" data-toggle="tooltip" data-placement="top" data-html="true" title="{{ bauer.getTooltip() }}"> {{ bauer.getDescription() }} </td>
+              		{% elseif bauer.getAdatoClass() == 2 %}
+                		<th class= "alert-secondary" scope="row"> {{ bauer.getUgedag() }} </th>
+                		<td class="text-right">{{ d }}</td>
+                		<td style='width: 160px' class="text-left text-truncate" data-toggle="tooltip" data-placement="top" data-html="true" title="{{ bauer.getTooltip() }}"> {{ bauer.getDescription() }} </td>
+              		{% elseif bauer.getAdatoClass() == 3 %}
+                		<th class= "alert-secondary" scope="row"> {{ bauer.getUgedag() }} </th>
+                		<td class="text-right alert-secondary">{{ d }}</td>
+                		<td style='width: 160px' class="text-left text-truncate alert-secondary" data-animation="true" data-toggle="tooltip" data-placement="auto" data-html="true" title="{{ bauer.getTooltip() }}"> {{ bauer.getDescription() }} </td>
+              		{% else %}
+                		<td colspan= 3 />
+              		{% endif %}
+          			{% endfor %}
+        			</tr>
       			{% endfor %}
-    			</tr>
-  			</thead>
-			<body>
-        {% for d in 1..31 %}
-          <tr class= 'small'>
-            {% for mm in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]|slice(nn,6) %}
-
-            	{# Herfra er der 4 muligheder
-            	   - Almindelig hverdag
-            	   - Lørdag
-            	   - Søn eller helligdag
-            	   - Ugyldig dag (f.eks 31. Juli) #}
-
-              {% if bauer.setDato(d, mm) and bauer.getAdatoClass() == 1 %}
-                <th scope="row">{{ bauer.getUgedag() }}  </th>
-                <td class="text-right">{{ d }}</td>
-                <td style='width: 160px' class="text-left text-truncate" data-toggle="tooltip" data-placement="top" data-html="true" title="{{ bauer.getTooltip() }}"> {{ bauer.getDescription() }} </td>
-              {% elseif bauer.getAdatoClass() == 2 %}
-                <th class= "alert-secondary" scope="row"> {{ bauer.getUgedag() }} </th>
-                <td class="text-right">{{ d }}</td>
-                <td style='width: 160px' class="text-left text-truncate" data-toggle="tooltip" data-placement="top" data-html="true" title="{{ bauer.getTooltip() }}"> {{ bauer.getDescription() }} </td>
-              {% elseif bauer.getAdatoClass() == 3 %}
-                <th class= "alert-secondary" scope="row"> {{ bauer.getUgedag() }} </th>
-                <td class="text-right alert-secondary">{{ d }}</td>
-                <td style='width: 160px' class="text-left text-truncate alert-secondary" data-animation="true" data-toggle="tooltip" data-placement="auto" data-html="true" title="{{ bauer.getTooltip() }}"> {{ bauer.getDescription() }} </td>
-              {% else %}
-                <td colspan= 3 />
-              {% endif %}
-          	{% endfor %}
-        	</tr>
-      	{% endfor %}
-    	</tbody>
-  	</table>
-    </div>
-  </div>
-  {% endfor %}
-
-
-
+    			</tbody>
+  			{% endfor %}
+  		</table>
+  	</div>
+	</div>
 
 
 {% endblock %}
