Fungerende version 1.0 alpha

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
     	<div class="collapse navbar-collapse" id="navbarNav">
     		<a class="navbar-brand" href="https://github.com/filicis">Filicis</a>
 
-      	<div class="navbar-nav mr-auto">
+      	<!-- div class="navbar-nav mr-auto">
           <a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
           <div class= 'nav-item dropdown'>
           	<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
@@ -60,7 +60,7 @@
             	<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
           	</div>
           </div>
-      	</div>
+      	</div -->
     	</div>
       {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }}
     		<div class="custom-control custom-switch px-3" >
@@ -95,7 +95,7 @@
 					integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   <!-- Aktiverer Tooltip -->
-  <!-- script> $(document).ready(function() { $("body").tooltip({ selector: '[data-toggle=tooltip]' }); }); </script -->
+  <script> $(document).ready(function() { $("body").tooltip({ selector: '[data-toggle=tooltip]' }); }); </script >
 
 
   {% endblock %}
