--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -8,24 +8,24 @@
 	<h1 class="h1 text-center">
     {{ bauer.getAar() }}
   </h1>
-  <p>
+  <!-- p>
     Påsken falder på: {{ bauer.testDay()}} / {{ bauer.testMonth()}} - Påske Jtal: {{ bauer.getPjtal() }} - {{ bauer.jtaltest() }}
-  </p>
+  </p -->
 
   <div class='container-flex d-flex justify-content-center'>
 		<div class="table-responsive-xl">
     	<table class="table table-fixed table-light table-sm" >
   			{% for nn in [0, 6] %}
-    			<thead class="thead-light">
+    			<thead class="table-success">
     				<tr>
       				{% for i in (bauer.months())|slice(nn,6) %}
-        				<th style='width: 186px' colspan='3' scope='col' class='text-center'> {% trans %} %i% {% endtrans %} </th>
+        				<th colspan='3' scope='col' class='text-center'> {% trans %} %i% {% endtrans %} </th>
       				{% endfor %}
     				</tr>
   				</thead>
 					<body>
         		{% for d in 1..31 %}
-          		<tr class= 'small'>
+          		<tr class='small'>
             		{% for mm in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]|slice(nn,6) %}
 
             					{# Herfra er der 4 muligheder
