--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,11 +22,11 @@
     {% endblock %}
 
   </head>
-  <body>
+  <body style='padding-top: 25px;'>
 
       <!-- Programmets Hovedmenu -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
     	<button class="navbar-toggler" type="button" data-toggle="collapse"
         	data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       	<span class="navbar-toggler-icon"></span>
