--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,9 @@
     {% endblock %}
 
   </head>
-  <body style='padding-top: 25px;'>
+  <body
+  	style='padding-top: 25px;'
+  	>
 
       <!-- Programmets Hovedmenu -->
 
