Menu med sprog og hjælp tilrettet

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,36 +39,47 @@
     	<div class="collapse navbar-collapse" id="navbarNav">
     		<a class="navbar-brand" href="https://github.com/filicis">Filicis</a>
 
-      	<!-- div class="navbar-nav mr-auto">
-          <a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a>
+      	<div class="navbar-nav mr-auto">
+          <!-- a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a -->
           <div class= 'nav-item dropdown'>
-          	<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
+          	<a class="nav-item nav-link dropdown-toggle disabled" href="#" id="navbarDropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
           	<div class="dropdown-menu" aria-labelledby="navbarDropdown01">
             	<a class="dropdown-item" href="#">Juliansk</a>
             	<a class="dropdown-item" href="#">Gregoriansk</a>
             	<a class="dropdown-item" href="#">Dansk / Norsk</a>
             	<a class="dropdown-item" href="#">Svensk</a>
             	<a class="dropdown-item" href="#">Italiensk</a>
-            	<div class="dropdown-divider"></div>
-            	<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
           	</div>
           </div>
           <div class= 'nav-item dropdown'>
-          	<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button"	data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
+          	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sprog</a>
           	<div class="dropdown-menu" aria-labelledby="navbarDropdown02">
+            	<a class="dropdown-item" href="/sprog/dansk">Dansk</a>
+            	<a class="dropdown-item disabled" href="#">Svensk</a>
+            	<a class="dropdown-item disabled" href="#">Norsk</a>
+            	<a class="dropdown-item disabled" href="#">Engelsk</a>
+            	<a class="dropdown-item" href="/sprog/latin">Latin</a>
+            	<div class="dropdown-divider"></div>
+          	</div>
+          </div>
+          <div class= 'nav-item dropdown'>
+          	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown03" role="button"	data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
+          	<div class="dropdown-menu" aria-labelledby="navbarDropdown03">
             	<a class="dropdown-item" href="#">Action</a>
             	<a class="dropdown-item" href="#">Baggrunds materiale</a>
             	<div class="dropdown-divider"></div>
             	<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
           	</div>
           </div>
-      	</div -->
+      	</div>
     	</div>
       {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }}
+{#
     		<div class="custom-control custom-switch px-3" >
       		{{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
       		<label class="custom-control-label" for="form_latin">Latin</label>
     		</div>
+#}
     		{{ form_widget(our_form.year, {'attr': {'class': 'form-control mr-sm-2', 'placeholder': 'Årstal', 'type': 'number', 'aria-label': 'Search'} }) }}
         {{ form_widget(our_form.send, {'label': 'Vælg', 'attr': {'class': 'btn btn-outline-primary my-2 my-sm-0'} })}}
    			{{ form_rest(our_form) }}
