--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
 
       <!-- Programmets Hovedmenu -->
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light text-info">
     	<button class="navbar-toggler" type="button" data-toggle="collapse"
         	data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       	<span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
             	<a class="dropdown-item" href="#">Action</a>
             	<a class="dropdown-item" href="#">Baggrunds materiale</a>
             	<div class="dropdown-divider"></div>
-            	<a class="dropdown-item" data-toggle='modal' data-target="#aboutModal" href="#">Om..</a>
+            	<a class="dropdown-item" href="about">Om..</a>
           	</div>
           </div>
       	</div>
