--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,11 +54,11 @@
           <div class= 'nav-item dropdown'>
           	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sprog</a>
           	<div class="dropdown-menu" aria-labelledby="navbarDropdown02">
-            	<a class="dropdown-item" href="/sprog/dansk">Dansk</a>
+            	<a class="dropdown-item" href="/da/">Dansk</a>
             	<a class="dropdown-item disabled" href="#">Svensk</a>
-            	<a class="dropdown-item disabled" href="#">Norsk</a>
+            	<a class="dropdown-item" href="/no/">Norsk</a>
             	<a class="dropdown-item disabled" href="#">Engelsk</a>
-            	<a class="dropdown-item" href="/sprog/latin">Latin</a>
+            	<a class="dropdown-item" href="/la">Latin</a>
             	<div class="dropdown-divider"></div>
           	</div>
           </div>
