--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -22,7 +22,7 @@
     			<thead class="table-success">
     				<tr>
       				{% for i in (bauer.months())|slice(nn,6) %}
-        				<th colspan='3' scope='col' class='text-center'> {% trans %} %i% {% endtrans %} </th>
+        				<th colspan='3' scope='col' class='text-center'>  {{i}}  </th>
       				{% endfor %}
     				</tr>
   				</thead>
