--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,7 +55,7 @@
           	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sprog</a>
           	<div class="dropdown-menu" aria-labelledby="navbarDropdown02">
             	<a class="dropdown-item" href="/da/setLocale">Dansk</a>
-            	<a class="dropdown-item" href="/se/setLocale">Svensk</a>
+            	<a class="dropdown-item" href="/sv/setLocale">Svensk</a>
             	<a class="dropdown-item" href="/no/setLocale">Norsk</a>
             	<a class="dropdown-item" href="/en/setLocale">Engelsk</a>
             	<a class="dropdown-item" href="/la/setLocale">Latin</a>
@@ -90,6 +90,17 @@
       {{ form_end(our_form )}}
       {% endif %}
     </div>
+      		<div class="navbar-expand d-flex flex-row-reverse" id="navbarNavAltMarkup" >
+  		<!-- div class="navbar-expand justify-content-end" id="navbarNavAltMarkup" -->
+    		<div class="navbar-nav mr_auto">
+					{% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+     				<span class= "navbar-text">Bruger: {{ app.user.username }} </span>
+        		<a class="nav-item nav-link" href="{{ path('app_logout') }}">Logout</a>
+ 					{% else %}
+      			<a class="nav-item nav-link" href="{{ path('app_login') }}">Login</a>
+					{% endif %}
+				</div>
+  		</div>
   </nav>
 
   {% include 'about.html.twig' %}
