iKalenderView under opbygning

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,8 @@
 	<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bauers Kalender for årene 600 til 3199 gældende for Danmark og Norge">
-    <meta name="keywords" content="Bauers Kalender, Bauers Calendar">
+    <meta name="description" content="Bauers Kalender for årene 600 til 3199 gældende for Danmark og Norge - Et værktøj til slægtsforskere, og andre der arbejde med de gamle kirkebøger">
+    <meta name="keywords" content="Bauers Kalender, Bauers Calendar, Slægtsforskning, Kikrebøger">
     <meta name="author" content="Michael Lindhardt Rasmussen">
 
     <meta name="google-site-verification" content="xHLmgP5L_DvNjXQsmjCphySJEljc62J2Gt9qdse7sBc" />
@@ -42,13 +42,15 @@
       	<div class="navbar-nav mr-auto">
           <!-- a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a -->
           <div class= 'nav-item dropdown'>
-          	<a class="nav-item nav-link dropdown-toggle disabled" href="#" id="navbarDropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
+          	<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
           	<div class="dropdown-menu" aria-labelledby="navbarDropdown01">
-            	<a class="dropdown-item" href="#">Juliansk</a>
-            	<a class="dropdown-item" href="#">Gregoriansk</a>
-            	<a class="dropdown-item" href="#">Dansk / Norsk</a>
-            	<a class="dropdown-item" href="#">Svensk</a>
-            	<a class="dropdown-item" href="#">Italiensk</a>
+            	<a class="dropdown-item active" href="#">Danmark</a>
+            	<a class="dropdown-item disabled" href="#">Norge</a>
+            	<a class="dropdown-item disabled" href="#">Sverige</a>
+            	<a class="dropdown-item disabled" href="#">Italien</a>
+            	<div class="dropdown-divider"></div>
+            	<a class="dropdown-item disabled" href="#">Juliansk</a>
+            	<a class="dropdown-item disabled" href="#">Gregoriansk</a>
           	</div>
           </div>
           <div class= 'nav-item dropdown'>
