--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -21,7 +21,7 @@
 
 
 	<!-- h1 class="h1 text-center">
-    Danmark - {{ bauer.getAar() }}
+    Danmark - {{ bauer.getYear() }}
   </h1  -->
 
   <!-- p>
@@ -31,18 +31,18 @@
 
   <div class='container-flex d-flex justify-content-center'>
 		<div class="table-responsive-xl">
-    	<table class="table table-fixed table-light table-sm" >
+    	<table class="table table-fixed table-bordered table-light table-sm" >
     	  <caption class='' style="caption-side:top">
 					<div class="row">
-    				<div class= 'col-sm'><h3>{{ bauer.getKalenderNavn() }}</h3></div>
-    				<div class= 'col-sm'><h1 class='text-center'>{{ bauer.getAar() }}</h1></div>
+    				<div class= 'col-sm'><h3>{{ bauer.getCalendarName() }}</h3></div>
+    				<div class= 'col-sm'><h1 class='text-center'>{{ bauer.getYear() }}</h1></div>
     				<div class= 'col-sm'></div>
   				</div>
     	  </caption>
   			{% for nn in [0, 6] %}
     			<thead class="table-success">
     				<tr>
-      				{% for i in (bauer.months())|slice(nn,6) %}
+      				{% for i in (bauer.getMonths())|slice(nn,6) %}
         				<th colspan='3' scope='col' class='text-center'>  {{ i|trans()|capitalize }}  </th>
       				{% endfor %}
     				</tr>
@@ -57,28 +57,12 @@
             	   				- Lørdag
             	   				- Søn eller helligdag
             	   				- Ugyldig dag (f.eks 31. Juli) #}
-{#
-              		{% if bauer.setDato(d, mm) and bauer.getAdatoClass() == 1 %}
-                		<th scope="row">{{ bauer.getUgedag()|trans()|slice(0,2)|capitalize }}  </th>
-                		<td class="text-right">{{ d }}</td>
-                		<td style='width: 160px' class="text-left text-truncate" data-toggle="tooltip" data-placement="top" data-html="true" title="{{ bauer.getTooltip()|trans }}"> {{ bauer.getDescription()|trans }} </td>
-              		{% elseif bauer.getAdatoClass() == 2 %}
-                		<th class= "alert-secondary" scope="row"> {{ bauer.getUgedag()|trans()|slice(0,2)|capitalize }} </th>
-                		<td class="text-right">{{ d }}</td>
-                		<td style='width: 160px' class="text-left text-truncate" data-toggle="tooltip" data-placement="top" data-html="true" title="{{ bauer.getTooltip()|trans }}"> {{ bauer.getDescription()|trans }} </td>
-              		{% elseif bauer.getAdatoClass() == 3 %}
-                		<th class= "alert-secondary" scope="row"> {{ bauer.getUgedag()|trans()|slice(0,2)|capitalize }} </th>
-                		<td class="text-right alert-secondary">{{ d }}</td>
-                		<td style='width: 160px' class="text-left text-truncate alert-secondary" data-animation="true" data-toggle="tooltip" data-placement="auto" data-html="true" title="{{ bauer.getTooltip()|trans }}"> {{ bauer.getDescription()|trans }} </td>
-#}
-{# Testes af #}
+
               		{% if bauer.setDato(d, mm) %}
-                		<th scope="row" {% if bauer.getAdatoClass() > 1 %} class="alert-secondary" {% endif %}>{{ bauer.getUgedag()|trans()|slice(0,2)|capitalize }}  </th>
-                		<td class="text-right {% if bauer.getAdatoClass() == 3 %} alert-secondary {% endif %}">{{ d }}</td>
-                		<td style='width: 160px' class="text-left text-truncate {% if bauer.getAdatoClass() == 3 %} alert-secondary {% endif %}" data-toggle="tooltip" data-placement="auto" data-html="true" title="{{ bauer.getTooltip()|trans }}"> {{ bauer.getDescription()|trans }} </td>
+                		<th scope= "col" {% if bauer.getAdatoClass() > 1 %} class="alert-secondary" {% endif %}>{{ bauer.getUgedag()|trans()|slice(0,2)|capitalize }}  </th>
+                		<td scope= "col" class="text-right {% if bauer.getAdatoClass() == 3 %} alert-secondary {% endif %}">{{ d }}</td>
+                		<td scope= "col" style='width: 160px' class="text-truncate {% if bauer.getAdatoClass() == 3 %} alert-secondary {% endif %}" data-toggle="tooltip" data-placement="auto" data-html="true" title="{{ bauer.getTooltip()|trans }}"> {{ bauer.getDescription()|trans }} </td>
 
-
-{# #}
               		{% else %}
                 		<td colspan= 3 />
               		{% endif %}
