Første test af accordion

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,6 +70,7 @@
             	<a class="dropdown-item disabled" href="#">Action</a>
             	<a class="dropdown-item disabled" href="#">Baggrunds materiale</a>
             	<div class="dropdown-divider"></div>
+            	<a class="dropdown-item" href="/da/accordion">Accordion</a>
             	<a class="dropdown-item" href="/da/about">Om..</a>
           	</div>
           </div>
